--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "redux-simple-starter-app",
+  "name": "react-book-list",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "Simple React Application example using Redux",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "https://github.com/manooweb/ReactBookList.git",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "prod":"webpack --mode production",
-    "dev":"webpack --mode development",
+    "prod": "webpack --mode production",
+    "dev": "webpack --mode development",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
